fix: 보안 감사 지적사항 수정 (인증/시크릿/XSS/CORS/권한/검증)